[gd_scene load_steps=23 format=3 uid="uid://b1w7iwiappfhy"]

[ext_resource type="Script" path="res://levels/tower/tower.gd" id="1_h2j3u"]
[ext_resource type="Texture2D" uid="uid://b6ot6mphiorrw" path="res://levels/tower/tutorial_background.png" id="2_v7vg7"]
[ext_resource type="Texture2D" uid="uid://dnpgxl2ugwsst" path="res://levels/tower/hanging_plants.png" id="3_obyyo"]
[ext_resource type="Texture2D" uid="uid://lk8jcciwtxqr" path="res://levels/tower/cauldron.png" id="4_7l65i"]
[ext_resource type="Texture2D" uid="uid://c2kbfwnstuv5l" path="res://levels/tower/hooks.png" id="5_06gy8"]
[ext_resource type="PackedScene" uid="uid://coxmrk4lomaqj" path="res://interactables/lamp/static_lamp.tscn" id="5_36cdy"]
[ext_resource type="Texture2D" uid="uid://b4ccb7pt4pk23" path="res://levels/tower/wizard.png" id="5_hnblp"]
[ext_resource type="Texture2D" uid="uid://c4ucnfnst0qgm" path="res://levels/tower/lamp_chain.png" id="5_mh7al"]
[ext_resource type="Texture2D" path="res://levels/house/perch.png" id="6_kx4sc"]
[ext_resource type="PackedScene" uid="uid://bltyn21ba7e66" path="res://shared/portal/portal.tscn" id="7_a8vgk"]
[ext_resource type="PackedScene" uid="uid://bkx8cgllgvkhp" path="res://crow/crow.tscn" id="7_snlp6"]
[ext_resource type="AudioStream" uid="uid://v5xtrqcmpt6o" path="res://levels/tower/tower.mp3" id="12_vxmrt"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ypn0x"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_fqmip"]
normal = Vector2(-1, 0)
distance = -640.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_0otyi"]
normal = Vector2(1, 1.3)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_v6gcs"]
normal = Vector2(-1, 1.3)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_gjter"]
distance = -360.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7paov"]
size = Vector2(60, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3cx11"]
size = Vector2(11, 148.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mskqx"]
size = Vector2(80, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p4ctm"]
size = Vector2(104, 188)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bsp6n"]
radius = 13.0
height = 104.0

[node name="Tower" type="Node2D"]
script = ExtResource("1_h2j3u")

[node name="BackgroundSprite" type="Sprite2D" parent="."]
position = Vector2(320, -126.5)
scale = Vector2(1.77778, 1.35139)
texture = ExtResource("2_v7vg7")

[node name="Boundaries" type="Node2D" parent="."]

[node name="LeftWall" type="StaticBody2D" parent="Boundaries"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/LeftWall"]
shape = SubResource("WorldBoundaryShape2D_ypn0x")

[node name="RightWall" type="StaticBody2D" parent="Boundaries"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/RightWall"]
shape = SubResource("WorldBoundaryShape2D_fqmip")

[node name="LeftCeiling" type="StaticBody2D" parent="Boundaries"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/LeftCeiling"]
position = Vector2(0, -295)
shape = SubResource("WorldBoundaryShape2D_0otyi")

[node name="RightCeiling" type="StaticBody2D" parent="Boundaries"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/RightCeiling"]
position = Vector2(640, -295)
shape = SubResource("WorldBoundaryShape2D_v6gcs")

[node name="Floor" type="StaticBody2D" parent="Boundaries"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Floor"]
position = Vector2(320, 0)
shape = SubResource("WorldBoundaryShape2D_gjter")

[node name="EntryPortal" parent="." instance=ExtResource("7_a8vgk")]
position = Vector2(29, 63)
scale = Vector2(4, 4)

[node name="ExitPortal" parent="." instance=ExtResource("7_a8vgk")]
position = Vector2(618, -191)
scale = Vector2(4, 4)
start_showing = false

[node name="Herbs" type="Sprite2D" parent="."]
position = Vector2(161.382, -5.5)
scale = Vector2(1.94737, 1.94737)
texture = ExtResource("3_obyyo")

[node name="Hooks" type="Sprite2D" parent="."]
position = Vector2(526, -234)
scale = Vector2(3, 3)
texture = ExtResource("5_06gy8")

[node name="Wizard" type="Sprite2D" parent="."]
position = Vector2(434, 251)
scale = Vector2(2, 2)
texture = ExtResource("5_hnblp")

[node name="Perch" type="StaticBody2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Perch"]
position = Vector2(96, 280)
scale = Vector2(5, 5)
texture = ExtResource("6_kx4sc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Perch"]
position = Vector2(96, 205)
shape = SubResource("RectangleShape2D_7paov")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Perch"]
position = Vector2(96, 281.25)
shape = SubResource("RectangleShape2D_3cx11")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Perch"]
position = Vector2(96, 352.5)
shape = SubResource("RectangleShape2D_mskqx")

[node name="Bookshelf" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bookshelf"]
position = Vector2(591, 268)
shape = SubResource("RectangleShape2D_p4ctm")

[node name="Cauldron" type="StaticBody2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Cauldron"]
position = Vector2(324, 284)
scale = Vector2(1.31641, 1.31641)
texture = ExtResource("4_7l65i")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Cauldron"]
polygon = PackedVector2Array(268, 214, 281, 205, 322, 200, 364, 205, 379, 214, 372, 233, 383, 261, 380, 293, 371, 302, 384, 326, 402, 329, 408, 374, 249, 373, 256, 331, 275, 326, 282, 304, 267, 288, 266, 258, 277, 236)

[node name="CauldronArea" type="Area2D" parent="Cauldron"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cauldron/CauldronArea"]
position = Vector2(324, 211)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_bsp6n")

[node name="HangingLamp" parent="." instance=ExtResource("5_36cdy")]
position = Vector2(198, -217)
scale = Vector2(3, 3)

[node name="PointLight2D" parent="HangingLamp" index="1"]
position = Vector2(0, 8.66667)
enabled = false

[node name="Sprite2D" type="Sprite2D" parent="HangingLamp"]
position = Vector2(0, -37)
texture = ExtResource("5_mh7al")
region_enabled = true
region_rect = Rect2(0, 7, 3, 76)

[node name="ShelfLamp" parent="." instance=ExtResource("5_36cdy")]
position = Vector2(555, 118)
scale = Vector2(2, 2)

[node name="PointLight2D" parent="ShelfLamp" index="1"]
enabled = false

[node name="Crow" parent="." instance=ExtResource("7_snlp6")]
position = Vector2(28, 48)
scale = Vector2(1.5, 1.5)

[node name="Camera" type="Camera2D" parent="."]
offset = Vector2(320, 180)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_vxmrt")
autoplay = true

[connection signal="crow_went_through_portal" from="ExitPortal" to="." method="_on_crow_went_through_exit_portal"]
[connection signal="body_entered" from="Cauldron/CauldronArea" to="." method="_on_body_entered_cauldron"]

[editable path="HangingLamp"]
[editable path="ShelfLamp"]
